# smartmailbox

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  init_db.bat  start_app.bat  test_bulk.db  test_safety2.db  test_safety3.db  test_safety4.db
apps/api/: .env.template  .env.test  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  smartmailbox.db
apps/api/app/: main.py  worker.py
apps/api/app/core/: config.py  logging.py
apps/api/app/core/security/: deps.py  encryption.py  jwt.py  (+2 more)
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  admin_settings.py  attachment.py  audit.py  draft.py  email.py  embedding.py  job.py  mailbox.py  quarantine.py  spam_rule.py  tag.py  thread.py  user.py
apps/api/app/routes/: admin.py  admin_settings.py  analytics.py  approval.py  audit.py  auth.py  drafts.py  emails.py  gmail.py  groups.py  health.py  jobs.py  mailboxes.py  metrics.py  quarantine.py  spam.py
apps/api/app/schemas/: bulk_action.py  draft.py  email.py  job.py  mailbox.py  user.py
apps/api/app/services/: analytics_service.py  audit.py  clustering_service.py  email.py  embedding_service.py  gmail_service.py  health_service.py  llm.py  quarantine_service.py  safety_service.py  smtp.py  spam_filter_service.py  workers.py
apps/api/app/utils/: error_mapping.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_inbox_ai.py  test_services.py  test_spam.py
apps/workers/: pyproject.toml
apps/workers/worker/: config.py  main.py
apps/workers/worker/shared/: logging.py
apps/workers/worker/tasks/: sync_emails.py
(+79 files in other folders)
